# NativeAndroid

./: .gitmodules  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/nide/nativeandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeRenderer.cpp  NativeRenderer.h  native-lib.cpp
app/src/main/java/com/nide/nativeandroid/: HomeActivity.kt  MainActivity.kt  NativeRenderer.java
app/src/main/java/com/nide/nativeandroid/ui/main/: PageViewModel.kt  PlaceholderFragment.kt  SectionsPagerAdapter.kt
app/src/main/res/layout/: activity_home.xml  fragment_home.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nide/nativeandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
naengine/: build.gradle
naengine/src/androidTest/java/com/nide/naengine/: ExampleInstrumentedTest.java
naengine/src/main/: AndroidManifest.xml
naengine/src/main/cpp/: CMakeLists.txt  na-engine-jni.cpp  na-engine.cpp  na-engine.h
naengine/src/main/java/com/nide/naengine/: NAActivity.java  NAEngine.java  NAGLSurfaceView.java
naengine/src/main/res/values/: strings.xml
naengine/src/test/java/com/nide/naengine/: ExampleUnitTest.java
